# bait-engine-v2

./: CLAUDE.md  README.md  pyproject.toml
docs/: 00_build_order.md  01_core_domain_model.md  02_analysis_pipeline.md  03_decision_and_branching.md  04_phase1_analysis_implementation.md  05_phase2_planning.md  06_phase3_generation_and_cli.md  07_phase4_persistence.md  08_phase5_provider_generation.md  09_phase6_adapters_ui.md  10_phase6_completion.md  11_phase7_execution_rail.md  12_phase8_rhetoric_scoring.md  13_phase7_completion.md  14_phase9_hunt_intake.md  15_phase10_bite_evolution.md  16_phase11_optimization_rail.md  17_phase11_artery6_semantic_signal_spec.md  18_phase12_auto_persona_router.md  19_phase13_autopilot_hardening.md  operator_runbook.md
scripts/: nightly_summary.sh  run_full_cycle.sh  verified_sync.py
src/bait_engine/adapters/: __init__.py  compiler.py  contracts.py  emitters.py  inbound.py  normalize.py  panel.py  presets.py  recommend.py  registry.py  select.py  validate.py
src/bait_engine/analysis/: __init__.py  analyzer.py  archetypes.py  axes.py  common.py  contradictions.py  opportunity.py  phases.py  semantics.py  signals.py
src/bait_engine/cli/: main.py
src/bait_engine/core/: types.py
src/bait_engine/generation/: __init__.py  (+10 more)
src/bait_engine_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_adapters.py  test_analysis.py  test_cli.py  test_generation.py  test_intake.py  test_mutation.py  test_planning.py  test_provider_generation.py  test_storage.py
tests/fixtures/: comments.json
(+21 files in other folders)
