[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bait-engine-v2"
version = "0.1.0"
description = "Cognitive core scaffolding for a rhetoric analysis engine"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6,<3"]

[project.scripts]
bait-engine = "bait_engine.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
